- debugPacket_sent and debugPacket_ro_sent 2 option functions like a
  packet sniffer.
- Support for private RO servers like aeRO and powRO with weird
  pre-login packets.
  To use this feature you must put the line 'preLoginCode 1' in
  tables/servers.txt.
- You can now use the monster name "all" in mon_control.txt
  to specify default values.

New commands:
- storage log
  Manually force writing to storage.txt. Some people complain that
  the storage log is broken, so until that has been resolved, this
  command will do.
- ai on
  ai off
  Turns AI on/off.
- card use <card inventory number>
  Get the list of items you can slot the card into.
- card mergelist
  Show the list of items you can slot the card into again.
- card mergecancel
  Cancel the card merging request.
- card merge <inventory number>
  Merge the used card into the specified item.
- card forceuse <card inventory index> <item inventory index>
  This advanced command will instantly merge the specified card
  and the specified item. It only checks if the items exist in the
  inventory, so it's possible to screw up with this.
- 'weight [<#>]' command tells you how much more stuff you can carry
  (if you want to know how many more Red Potion you can carry, and
  Red Potion weighs 7, then type 'weight 7').
- arrowcraft forceuse #
  Craft arrows immediately without using the skill.
  On many servers any class can create arrows using this exploit.
  # is the inventory number of the item you wish to craft into arrows.
- friend
  List your friends.
- friend request #
  Request a player to be your friend.
  The player number is obtained by the 'pl' command.
- friend remove #
  Remove a friend from your friend list.
- friend accept
  Accept the request to be friend.
- friend reject
  Reject the request to be friend.
- friend pm #
  Add the specified friend to the PM list for easy PM-ing.
- chat create "title" <max users> <public flag> <password>
  Create a chat room.